deploy/k8s/01-namespace-secrets-configmaps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cafe-boreal
