deploy/k8s/03-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-api
  namespace: cafe-boreal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-api
  template:
    metadata:
      labels:
        app: catalog-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: catalog-api
          image: cafeboreal/catalog-api:v1.0.0
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: cafe-boreal
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: catalog-api
