deploy/k8s/05-customers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-api
  namespace: cafe-boreal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customers-api
  template:
    metadata:
      labels:
        app: customers-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: customers-api
          image: cafeboreal/customers-api:v1.0.0
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3003
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  namespace: cafe-boreal
spec:
  ports:
    - port: 3003
      targetPort: 3003
  selector:
    app: customers-api
