deploy/k8s/06-legacy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy-app
  namespace: cafe-boreal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: legacy-app
  template:
    metadata:
      labels:
        app: legacy-app
    spec:
      containers:
        - name: legacy-app
          image: cafeboreal/legacy-app:v1.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: legacy-service
  namespace: cafe-boreal
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: legacy-app
